force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/EZProtect4SF__EZProtectWorkQueueItem__c.object-meta.xml
<CustomObject>
    <label>EZProtect Work Queue Item</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EZProtect Work Queue Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>