force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__CompletionDate__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__CompletionDate__c</fullName>
    <description>The date and time when the work item succeeded.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Completion Date</label>
    <type>DateTime</type>
</CustomField>