force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__CurrentAttemptCount__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__CurrentAttemptCount__c</fullName>
    <description>The current number of times the work item has been attempted to be completed.</description>
    <label>Current Attempt Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>