force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ErrorMessage__c</fullName>
    <description>The stack trace or logical error for any error that occurred.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>