force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__FirstAttemptDate__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__FirstAttemptDate__c</fullName>
    <description>The first date and time the work item was attempted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>First Attempt Date</label>
    <type>DateTime</type>
</CustomField>