force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__LastAttemptDate__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__LastAttemptDate__c</fullName>
    <description>The last date and time the work item was attempted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Attempt Date</label>
    <type>DateTime</type>
</CustomField>