force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__NumberOfAttempts__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__NumberOfAttempts__c</fullName>
    <description>The number of times the work item should be attempted if it fails.</description>
    <label>Number of Attempts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>