force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__Operation__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__Operation__c</fullName>
    <description>The operation to be performed during the workflow.</description>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>S3Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>