force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__RelatedRecordId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__RelatedRecordId__c</fullName>
    <description>The Id of the parent or related record to the record associated to the Target Id.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>