force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__ResourceData__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__ResourceData__c</fullName>
    <description>The fully qualified location of the S3 file to be deleted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resource Data</label>
    <length>250</length>
    <type>Text</type>
</CustomField>