force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__TargetId__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetId__c</fullName>
    <description>The Id of the record that the work item is performing work on.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Target Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>