force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/fields/EZProtect4SF__TargetType__c.field-meta.xml
<CustomField>
    <fullName>EZProtect4SF__TargetType__c</fullName>
    <description>The type of work item to be processed.</description>
    <label>Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ContentVersion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>