force-app/main/default/objects/EZProtect4SF__EZProtectWorkQueueItem__c/listViews/EZProtect4SF__All.listView-meta.xml
<ListView>
    <fullName>EZProtect4SF__All</fullName>
    <columns>NAME</columns>
    <columns>EZProtect4SF__Operation__c</columns>
    <columns>EZProtect4SF__TargetType__c</columns>
    <columns>EZProtect4SF__TargetId__c</columns>
    <columns>EZProtect4SF__NumberOfAttempts__c</columns>
    <columns>EZProtect4SF__CurrentAttemptCount__c</columns>
    <columns>EZProtect4SF__Status__c</columns>
    <columns>EZProtect4SF__FirstAttemptDate__c</columns>
    <columns>EZProtect4SF__CompletionDate__c</columns>
    <columns>EZProtect4SF__ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>